Fix alignment for page list in topic view

--- a/Service/Themes/Default/css.css
+++ b/Service/Themes/Default/css.css
@@ -1826,7 +1826,7 @@ textarea {
  * if you want to remove that border, just remove the background from .box
  * and remove the margin on .box>.title */
 .box {
-  margin: 10px 5px 0;
+  margin: 10px 5px 10px;
   background: url('img/silver_grad.png') repeat-x;
   border: 1px solid #000;
 }
@@ -1930,10 +1930,6 @@ textarea {
 .pages-bottom {
   position: absolute;
   margin-left: 10px;
-}
-
-.pages-bottom {
-  margin-top: 10px;
 }
 
 .sort {
